--- a/src/common/_helper_classes.scss
+++ b/src/common/_helper_classes.scss
@@ -5,76 +5,76 @@
 
 .button {
 	transition: 100ms;
+}
 
-	.score-neutral {
-		background-color: var(--bg-400) !important;
-		color: var(--base-text) !important;
-	}
+.button.score-neutral {
+	background-color: var(--bg-400) !important;
+	color: var(--base-text) !important;
+}
 
-	.score-neutral:hover {
-		background-color: var(--bg) !important;
-	}
+.button.score-neutral:hover {
+	background-color: var(--bg) !important;
+}
 
-	.score-positive {
-		background-color: var(--favorite-button) !important;
-		color: var(--base-text) !important;
-	}
+.button.score-positive {
+	background-color: var(--favorite-button) !important;
+	color: var(--base-text) !important;
+}
 
-	.score-positive:hover {
-		background-color: var(--favorite-button-hover) !important;
-		color: var(--button-text-hover-secondary) !important;
-	}
+.button.score-positive:hover {
+	background-color: var(--favorite-button-hover) !important;
+	color: var(--button-text-hover-secondary) !important;
+}
 
-	.score-negative {
-		background-color: var(--remove-favorite) !important;
-		color: var(--base-text) !important;
-	}
+.button.score-negative {
+	background-color: var(--remove-favorite) !important;
+	color: var(--base-text) !important;
+}
 
-	.score-negative:hover {
-		background-color: var(--remove-favorite-hover) !important;
-		color: var(--button-text-hover-secondary) !important;
-	}
+.button.score-negative:hover {
+	background-color: var(--remove-favorite-hover) !important;
+	color: var(--button-text-hover-secondary) !important;
+}
 
-	.btn-success {
-		background-color: var(--favorite-button) !important;
-		color: var(--base-text) !important;
-	}
+.button.btn-success {
+	background-color: var(--favorite-button) !important;
+	color: var(--base-text) !important;
+}
 
-	.btn-success:hover {
-		background-color: var(--favorite-button-hover) !important;
-		color: var(--button-text-hover-secondary) !important;
-	}
+.button.btn-success:hover {
+	background-color: var(--favorite-button-hover) !important;
+	color: var(--button-text-hover-secondary) !important;
+}
 
-	.btn-danger {
-		background-color: var(--remove-favorite) !important;
-		color: var(--base-text) !important;
-	}
+.button.btn-danger {
+	background-color: var(--remove-favorite) !important;
+	color: var(--base-text) !important;
+}
 
-	.btn-danger:hover {
-		background-color: var(--remove-favorite-hover) !important;
-		color: var(--button-text-hover-secondary) !important;
-	}
+.button.btn-danger:hover {
+	background-color: var(--remove-favorite-hover) !important;
+	color: var(--button-text-hover-secondary) !important;
+}
 
-	.btn-warn {
-		background-color: var(--warn-button) !important;
-		color: var(--base-text) !important;
-	}
+.button.btn-warn {
+	background-color: var(--warn-button) !important;
+	color: var(--base-text) !important;
+}
 
-	.btn-warn:hover {
-		background-color: var(--warn-button-hover) !important;
-		color: var(--button-text-hover-secondary) !important;
-	}
+.button.btn-warn:hover {
+	background-color: var(--warn-button-hover) !important;
+	color: var(--button-text-hover-secondary) !important;
+}
 
-	.btn-neutral {
-		background-color: var(--bg) !important;
-		color: var(--base-text) !important;
-		transition: var(--header-link-transition);
-	}
+.button.btn-neutral {
+	background-color: var(--bg) !important;
+	color: var(--base-text) !important;
+	transition: var(--header-link-transition);
+}
 
-	.btn-neutral:hover {
-		background-color: var(--bg-400) !important;
-		color: var(--base-text) !important;
-	}
+.button.btn-neutral:hover {
+	background-color: var(--bg-400) !important;
+	color: var(--base-text) !important;
 }
 
 .bg-foreground {
