--- a/src/common/main_layout.scss
+++ b/src/common/main_layout.scss
@@ -6,14 +6,15 @@ div#page {
 	padding-bottom: 4rem;
 
 	aside#sidebar {
-		#search-box {
+		.post-search {
 			display: flex;
 			align-items: center;
 			justify-content: center;
 			position: relative;
+			border-radius: 4px;
 		}
 
-		#search-box h1 {
+		.post-search h3 {
 			position: absolute;
 			font-size: 0rem !important;
 			width: 90%;
@@ -21,39 +22,46 @@ div#page {
 			z-index: 9999;
 		}
 
-		#search-box h1 span {
-			position: relative;
+		.post-search span {
+			position: absolute;
 			font-size: .75rem;
 			pointer-events: auto;
-			right: 1.5rem;
-			top: .25rem;
+			right: 2rem;
+			top: .5rem;
 			display: flex;
 		}
 
-		#search-box button {
+		.post-search button {
 			display: none;
 		}
 
-		/* Sidebar searchbox */
-		/* re621 version -> src/specific/re621/modules/_structure-utilities.scss */
-		section#search-box form, section#mode-box form {
-			display: flex;
-			flex-direction: column;
-			height: fit-content;
-			width: 100%;
+		.post-search form.post-search-form textarea::placeholder {
+			color: transparent !important;
 		}
 
-		section#search-box form input[type="text"], section#mode-box form input[type="text"] {
-			height: 2rem;
+		/* Sidebar searchbox */
+		section.post-search form,
+		div#page aside#sidebar section#re621-insearch form,
+		section#mode-box form {
+			display: flex;
 			width: 100%;
-			border-radius: 7.5px;
-			padding: .5rem 2rem .5rem .5rem;
-			color: var(--base-text);
-			background-color: var(--bg-400);
-			border: 2px solid var(--bg-300);
-			margin-top: 1rem;
-			margin-inline: auto;
 		}
+	}
+
+	/* Sidebar searchbox */
+	section.post-search form textarea,
+	div#page section#re621-insearch form textarea,
+	section#mode-box form textarea {
+		height: 2rem;
+		width: 100%;
+		border-radius: 7.5px;
+		padding: .5rem 2rem .5rem .5rem;
+		color: var(--base-text);
+		background-color: var(--bg-400);
+		border: 2px solid var(--bg-300);
+		margin-top: 1rem;
+		margin-inline: auto;
+		scrollbar-width: none !important;
 	}
 
 	div.site-notice {
@@ -70,13 +78,13 @@ div#page {
 	}
 }
 
-.search-help {
+.post-search-help {
 	display: flex;
 	align-items: center;
 	width: 0;
 }
 
-.search-help a {
+.post-search-help a {
 	width: 0rem;
 	height: 100%;
 	overflow: hidden;
@@ -84,7 +92,7 @@ div#page {
 	margin-right: -1rem;
 }
 
-.search-help a::before {
+.post-search-help a::before {
 	content: url("data:image/svg+xml,%3Csvg height='20.0' viewBox='0 0 24.0 24.0' width='20.0' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10 -4.48 10 -10S17.52 2 12 2zM13 19h-2v-2h2v2zM15.07 11.25l-0.9 0.92C13.45 12.9 13 13.5 13 15h-2v-0.5c0 -1.1 0.45 -2.1 1.17 -2.83l1.24 -1.26c0.37 -0.36 0.59 -0.86 0.59 -1.41 0 -1.1 -0.9 -2 -2 -2s-2 0.9 -2 2L8 9c0 -2.21 1.79 -4 4 -4s4 1.79 4 4c0 0.88 -0.36 1.68 -0.93 2.25z' fill='%23ffffff'/%3E%3C/svg%3E");
 	height: 1rem;
 	width: 1rem;
@@ -92,12 +100,12 @@ div#page {
 	opacity: .3;
 }
 
-.search-help a:hover::before {
+.post-search-help a:hover::before {
 	opacity: .5;
 	transition: 100ms;
 }
 
-.search-help::before:hover .search-help {
+.post-search-help::before:hover .search-help {
 	font-size: .75rem;
 }
 
