shift tag category colors for new contributor tag category

--- a/src/themes/classic/_theme_hotdog.scss
+++ b/src/themes/classic/_theme_hotdog.scss
@@ -40,10 +40,12 @@ body[data-th-main="hotdog"] {
 	--mode-blacklist:#242424;
 	--mode-download: #4d0054;
 	--mode-fullscreen: #194f4d;
-	--tag-cat-1:#000;
-	--tag-cat-1-hover:#222;
-	--tag-cat-2:#f2ac08;
-	--tag-cat-2-hover:#fbd67f;
+	--tag-cat-0:#000;
+	--tag-cat-0-hover:#222;
+	--tag-cat-1:#f2ac08;
+	--tag-cat-1-hover:#fbd67f;
+	--tag-cat-2: #c0c0c0;
+	--tag-cat-2-hover: #71706e;
 	--tag-cat-3:#d0d;
 	--tag-cat-3-hover:#ff5eff;
 	--tag-cat-4:#0a0;
