--- a/src/themes/muted/_theme_bloodlust.scss
+++ b/src/themes/muted/_theme_bloodlust.scss
@@ -36,10 +36,12 @@ body[data-th-main="bloodlust"] {
 	--mode-blacklist:#000;
 	--mode-download: #553658;
 	--mode-fullscreen: #365857;
-	--tag-cat-1:#c17777;
-	--tag-cat-1-hover:#d79090;
-	--tag-cat-2:#be7f53;
-	--tag-cat-2-hover:#f8a66d;
+	--tag-cat-0:#c17777;
+	--tag-cat-0-hover:#d79090;
+	--tag-cat-1:#be7f53;
+	--tag-cat-1-hover:#f8a66d;
+	--tag-cat-2: #c0c0c0;
+	--tag-cat-2-hover: #71706e;
 	--tag-cat-3:#51c2c2;
 	--tag-cat-3-hover:#6ffbec;
 	--tag-cat-4:#50be76;
