--- a/src/themes/muted/_theme_hotdog.scss
+++ b/src/themes/muted/_theme_hotdog.scss
@@ -36,10 +36,12 @@ body[data-th-main="hotdog"] {
 	--mode-blacklist:#171c22;
 	--mode-download: #553658;
 	--mode-fullscreen: #365857;
-	--tag-cat-1:#bdb1ac;
-	--tag-cat-1-hover:#d6bbae;
-	--tag-cat-2:#bb8864;
-	--tag-cat-2-hover:#e7a87d;
+	--tag-cat-0:#bdb1ac;
+	--tag-cat-0-hover:#d6bbae;
+	--tag-cat-1:#bb8864;
+	--tag-cat-1-hover:#e7a87d;
+	--tag-cat-2: #c0c0c0;
+	--tag-cat-2-hover: #71706e;
 	--tag-cat-3:#7abebe;
 	--tag-cat-3-hover:#9ff7ee;
 	--tag-cat-4:#7bbe92;
