--- a/src/themes/muted/_theme_pony.scss
+++ b/src/themes/muted/_theme_pony.scss
@@ -36,10 +36,12 @@ body[data-th-main="pony"] {
 	--mode-blacklist:#171c22;
 	--mode-download: #553658;
 	--mode-fullscreen: #365857;
-	--tag-cat-1:#c590b6;
-	--tag-cat-1-hover:#e6a8cf;
-	--tag-cat-2:#bd987e;
-	--tag-cat-2-hover:#f2c3a2;
+	--tag-cat-0:#c590b6;
+	--tag-cat-0-hover:#e6a8cf;
+	--tag-cat-1:#bd987e;
+	--tag-cat-1-hover:#f2c3a2;
+	--tag-cat-2: #c0c0c0;
+	--tag-cat-2-hover: #71706e;
 	--tag-cat-3:#7abebe;
 	--tag-cat-3-hover:#9ff7ee;
 	--tag-cat-4:#7bbe92;
