--- a/src/themes/popular/_theme_bloodlust.scss
+++ b/src/themes/popular/_theme_bloodlust.scss
@@ -36,10 +36,12 @@ body[data-th-main="bloodlust"] {
 	--mode-blacklist:#000;
 	--mode-download: #553658;
 	--mode-fullscreen: #365857;
-	--tag-cat-1:#63acb6;
-	--tag-cat-1-hover:#7accd7;
-	--tag-cat-2:#cb764d;
-	--tag-cat-2-hover:#ef9062;
+	--tag-cat-0:#63acb6;
+	--tag-cat-0-hover:#7accd7;
+	--tag-cat-1:#cb764d;
+	--tag-cat-1-hover:#ef9062;
+	--tag-cat-2: #c0c0c0;
+	--tag-cat-2-hover: #71706e;
 	--tag-cat-3:#61bac5;
 	--tag-cat-3-hover:#78dce8;
 	--tag-cat-4:#5fbb8b;
