--- a/src/themes/popular/_theme_hexagon.scss
+++ b/src/themes/popular/_theme_hexagon.scss
@@ -44,10 +44,12 @@ body {
 	--mode-blacklist:#171c22;
 	--mode-download: #553658;
 	--mode-fullscreen: #365857;
-	--tag-cat-1:#88c0d0;
-	--tag-cat-1-hover:#8ad4e9;
-	--tag-cat-2:#d08770;
-	--tag-cat-2-hover:#f0a087;
+	--tag-cat-0:#88c0d0;
+	--tag-cat-0-hover:#8ad4e9;
+	--tag-cat-1:#d08770;
+	--tag-cat-1-hover:#f0a087;
+	--tag-cat-2: #c0c0c0;
+	--tag-cat-2-hover: #71706e;
 	--tag-cat-3:#b48ead;
 	--tag-cat-3-hover:#e4a4d9;
 	--tag-cat-4:#8cbe94;
