--- a/src/themes/popular/_theme_hotdog.scss
+++ b/src/themes/popular/_theme_hotdog.scss
@@ -36,10 +36,12 @@ body[data-th-main="hotdog"] {
 	--mode-blacklist:#171c22;
 	--mode-download: #553658;
 	--mode-fullscreen: #365857;
-	--tag-cat-1:#ebdbb2;
-	--tag-cat-1-hover:#fbf1c7;
-	--tag-cat-2:#fe8019;
-	--tag-cat-2-hover:#ffa861;
+	--tag-cat-0:#ebdbb2;
+	--tag-cat-0-hover:#fbf1c7;
+	--tag-cat-1:#fe8019;
+	--tag-cat-1-hover:#ffa861;
+	--tag-cat-2: #c0c0c0;
+	--tag-cat-2-hover: #71706e;
 	--tag-cat-3:#83a598;
 	--tag-cat-3-hover:#aaccbf;
 	--tag-cat-4:#8ec07c;
