--- a/src/themes/popular/_theme_pony.scss
+++ b/src/themes/popular/_theme_pony.scss
@@ -36,10 +36,12 @@ body[data-th-main="pony"] {
 	--mode-blacklist:#171c22;
 	--mode-download: #553658;
 	--mode-fullscreen: #365857;
-	--tag-cat-1:#ebbcba;
-	--tag-cat-1-hover:#f7dbda;
-	--tag-cat-2:#f6c177;
-	--tag-cat-2-hover:#fed9a4;
+	--tag-cat-0:#ebbcba;
+	--tag-cat-0-hover:#f7dbda;
+	--tag-cat-1:#f6c177;
+	--tag-cat-1-hover:#fed9a4;
+	--tag-cat-2: #c0c0c0;
+	--tag-cat-2-hover: #71706e;
 	--tag-cat-3:#9ccfd8;
 	--tag-cat-3-hover:#c3edf4;
 	--tag-cat-4:#45d07a;
