--- a/src/themes/popular/_theme_serpent.scss
+++ b/src/themes/popular/_theme_serpent.scss
@@ -36,10 +36,12 @@ body[data-th-main="serpent"] {
 	--mode-blacklist:#171c22;
 	--mode-download: #553658;
 	--mode-fullscreen: #365857;
-	--tag-cat-1:#9da9a0;
-	--tag-cat-1-hover:#bbd6c2;
-	--tag-cat-2:#c27c5d;
-	--tag-cat-2-hover:#e69875;
+	--tag-cat-0:#9da9a0;
+	--tag-cat-0-hover:#bbd6c2;
+	--tag-cat-1:#c27c5d;
+	--tag-cat-1-hover:#e69875;
+	--tag-cat-2: #c0c0c0;
+	--tag-cat-2-hover: #71706e;
 	--tag-cat-3:#b47e98;
 	--tag-cat-3-hover:#d699b6;
 	--tag-cat-4:#689d96;
