--- a/src/themes/muted/_theme_hexagon.scss
+++ b/src/themes/muted/_theme_hexagon.scss
@@ -44,10 +44,12 @@ body {
 	--mode-blacklist:#171c22;
 	--mode-download: #553658;
 	--mode-fullscreen: #365857;
-	--tag-cat-1:#7cb2bd;
-	--tag-cat-1-hover:#96d8e5;
-	--tag-cat-2:#bd987e;
-	--tag-cat-2-hover:#f2c3a2;
+	--tag-cat-0:#7cb2bd;
+	--tag-cat-0-hover:#96d8e5;
+	--tag-cat-1:#bd987e;
+	--tag-cat-1-hover:#f2c3a2;
+	--tag-cat-2: #c0c0c0;
+	--tag-cat-2-hover: #71706e;
 	--tag-cat-3:#be7aa1;
 	--tag-cat-3-hover:#f79fd1;
 	--tag-cat-4:#7bbe92;
