--- a/src/themes/classic/_theme_pony.scss
+++ b/src/themes/classic/_theme_pony.scss
@@ -1,3 +1,4 @@
+@if $theme-pack == "classic" {
 body[data-th-main="pony"] {
 	--themeName:"Pony";
 	--bg-300: #2f175c;
@@ -85,4 +86,5 @@ body[data-th-main="pony"] {
 	--button-text: #fff;
 	--button-text-hover: #fff;
 	--button-text-hover-secondary: #fff;
+}
 }
