--- a/src/themes/muted/_theme_hotdog.scss
+++ b/src/themes/muted/_theme_hotdog.scss
@@ -1,3 +1,4 @@
+@if $theme-pack == "muted" {
 body[data-th-main="hotdog"] {
 	--themeName: "Hot Coffee";
 	--bg-300: #3c3836;
@@ -81,4 +82,5 @@ body[data-th-main="hotdog"] {
 	--button-text: #d6bbae;
 	--button-text-hover: #d6bbae;
 	--button-text-hover-secondary: #f0cfc0;
+}
 }
