--- a/src/themes/popular/_theme_bloodlust.scss
+++ b/src/themes/popular/_theme_bloodlust.scss
@@ -1,3 +1,4 @@
+@if $theme-pack == "popular" {
 body[data-th-main="bloodlust"] {
 	--themeName: "Sonokai - Shusia";
 	--bg-300: #37343a;
@@ -81,4 +82,5 @@ body[data-th-main="bloodlust"] {
 	--button-text: #c3ccd4;
 	--button-text-hover: #c3ccd4;
 	--button-text-hover-secondary: #fafafb;
+}
 }
