add $ui-state-highlight-short setting (for the viewing sample box) intended for the regular css file. these new settings shouldnt be altered when generating the stylus css file.

--- a/src/base/_vars.scss
+++ b/src/base/_vars.scss
@@ -2,3 +2,5 @@ $theme-pack: "classic";
 $profile-picture-circle: 1;
 $comment-buttons: 1;
 $name-rank-border-colors: 1;
+
+$ui-state-highlight-short: 1;
