--- a/src/common/jquery_ui_custom.scss
+++ b/src/common/jquery_ui_custom.scss
@@ -13,5 +13,8 @@
 	border-left: .25rem solid var(--elements-highlight) !important;
 	border-radius: 2px 8px 8px 2px;
 	font-size: .8rem !important;
-	width: fit-content;
+
+	@if $ui-state-highlight-short == 1 {
+		width: fit-content;
+	}
 }
