make the items in the post score box not squished i dont like the new ui change that removed the spacing. re621 can bring it back, but i dont use re621 and this doesnt conflict so do it here.

--- a/src/common/thumbnails.scss
+++ b/src/common/thumbnails.scss
@@ -24,6 +24,26 @@ article.thumbnail .desc a::before {
 	display: none;
 }
 
+article.thumbnail .desc .score {
+	margin-left: 0.5em;
+}
+
+article.thumbnail .desc .favorites {
+	margin-left: 0.5em;
+}
+
+article.thumbnail .desc .comments {
+	margin-left: 0.5em;
+}
+
+article.thumbnail .desc .rating {
+	margin-left: 0.5em;
+}
+
+article.thumbnail .desc .extras {
+	margin-left: 0.5em;
+}
+
 article.thumbnail[data-tags~="animated"] > a::before, article.thumbnail[data-file-ext~="webm"] > a::before {
 	background-color: var(--bg-300) !important;
 	color: var(--base-text) !important;
