--- a/src/eSixCafe.scss
+++ b/src/eSixCafe.scss
@@ -12,6 +12,7 @@
 @import "common/footer";
 @import "common/helper_classes";
 @import "common/scores";
+@import "common/standard_elements";
 @import "common/ads.scss";
 @import "common/autocomplete.scss";
 @import "common/blacklists.scss";
