--- a/src/eSixCafe.scss
+++ b/src/eSixCafe.scss
@@ -56,7 +56,7 @@
 @import "specific/forum.scss";
 @import "specific/guest_warning.scss";
 @import "specific/help.scss";
-/*@import "specific/home.scss";*/
+@import "specific/home.scss";
 @import "specific/iqdb_queries.scss";
 @import "specific/pools.scss";
 @import "specific/popular.scss";
