--- a/src/specific/home.scss
+++ b/src/specific/home.scss
@@ -1,8 +1,12 @@
-html {
-	overflow: hidden;
+/*|Stylus|
+@-moz-document url("https://e621.net/"), url("https://e926.net/"), url("https://e926.net"), url("https://e621.net") {
+	html {
+		overflow: hidden;
+	}
 }
+|Stylus|*/
 
-body {
+body.c-static.a-home {
 	max-height: 100vh;
 	max-width: 100vw;
 	overflow: hidden;
@@ -23,7 +27,7 @@ body.c-static.a-home nav.navigation {
 	padding-right: 1rem;
 }
 
-div#page {
+body.c-static.a-home div#page {
 	background: none !important;
 	margin: 25rem auto 0 !important;
 }
@@ -34,7 +38,7 @@ body.c-static.a-home section[class^="home-footer"] {
 	background-color: var(--bg);
 }
 
-.home-section, .home-footer-top {
+body.c-static.a-home .home-section, .home-footer-top {
 	border-bottom: 2px solid var(--bg-400);
 }
 
@@ -110,7 +114,7 @@ body.c-static.a-home .home-footer-counter img {
 	display: none;
 }
 
-body, div#page {
+body.c-static.a-home, body.c-static.a-home div#page {
 	max-height: 100vh;
 	overflow: hidden;
 }
