--- a/release/eSixCafe.user.css
+++ b/release/eSixCafe.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           eSix Café
 @namespace      mandorinn
-@version        2.2.5
+@version        2.2.6
 @description    A muted and easy on the eyes style for e621. Big credits to Faucet for the bug reports so far, thank you!
 @author         mandorinn [(www.mandorinn.dev)], faucet [(https://e621.net/users/601225)]
 @preprocessor stylus
@@ -1996,6 +1996,16 @@ if themep == classic {
 	}
 	.post-search button {
 		display:none !important;
+	}
+	.search-controls {
+		background: transparent !important;
+		& button {
+			height: fit-content !important;
+			display:grid;
+			place-items: center;
+			border: 2px solid var(--bg-300);
+			margin-top: .25rem;
+		}
 	}
 	/* Fixes select box arrows being black */
 	select, select:active, select:focus, select:hover, select.button.btn-neutral, select.button.btn-neutral:active, select.button.btn-neutral:focus, select.button.btn-neutral:hover {
